Princeton fellow submitted

--- a/xwang_cv_12pt.tex
+++ b/xwang_cv_12pt.tex
@@ -10,7 +10,6 @@
 \newcommand{\marg}{1in}
 \geometry{letterpaper,tmargin=\marg,bmargin=\marg,lmargin=1in,rmargin=1in,headheight=0in,headsep=.2in,footskip=.4in}
 
-%\usepackage[latin1]{inputenc}
 \usepackage{marvosym}
 \usepackage{fontspec} 					    %for loading fonts
 \usepackage{xunicode,xltxtra,url,parskip} 	%other packages for formatting
@@ -52,8 +51,6 @@
 %\endgroup
 %-------------- define the width for wrapping texts
 \newcommand{\textwrap}{5.3in}
-%-------------- add texts in box, see: https://tex.stackexchange.com/questions/36524/how-to-put-a-framed-box-around-text-math-environment/36528
-\usepackage{tcolorbox}
 
 %= = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
 % add page number without the header line
@@ -127,7 +124,6 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-1em}
 \section{Awards and Honors}
 
 \vspace*{-.5em}
@@ -163,7 +159,6 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-2.5em}
 \section{Talks and Colloquia}
 
 \begingroup
@@ -323,7 +318,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 \vspace*{-.5em}
 \begin{longtable}{rp{5.8in}}
 
-\multicolumn{2}{c}{\bf\textsc{1st/2nd Author Papers in Refereed Academic Journals}}      \\
+\multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
 8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2018, \textit{Astrophys. J.} submitted (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
@@ -339,7 +334,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 %    \item[5]\hypertarget{5}{} \textbf{Wang, X.}, \& Huang, Y. F. On the Counter-jet Emission in GRB Afterglows. 2010b, \textit{AIP Conference Proceedings}, 1279, 460 (\href{http://arxiv.org/abs/1012.0521}{arXiv:1012.0521})
 %\end{list}   \\
 \\[\narrow]
-\multicolumn{2}{c}{\bf\textsc{Contributing Author Papers in Refereed Academic Journals}}      \\
+\multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
 17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.} accepted (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
 15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})   \\
