--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -30,7 +30,7 @@
 
 %%% FONTS
 \usepackage{amsmath,amssymb,amsxtra,amsfonts}   % to use pmatrix, etc.
-\renewcommand*{\footnotelayout}{\normalsize}
+%\renewcommand*{\footnotelayout}{\normalsize}
 \defaultfontfeatures{Mapping=tex-text}
 
 %%% PARAGRAPH
@@ -44,8 +44,8 @@
 \hypersetup{colorlinks,breaklinks,urlcolor=linkcolour, linkcolor=linkcolour}
 %-------------- custom formatting for \section
 \usepackage{titlesec}
-\titleformat{\section}{\large\scshape\raggedright}{}{0em}{}[\titlerule]
-\titlespacing{\section}{0pt}{2ex}{0ex}
+\titleformat{\section}{\bf\scshape\raggedright}{}{0em}{}[\titlerule]
+\titlespacing{\section}{0pt}{1ex}{0ex}
 %-------------- add euro symbol
 \usepackage[gen]{eurosym}
 %-------------- fine tune empty line height
@@ -56,6 +56,8 @@
 %\begin{longtable}{...}
 %\end{longtable}
 %\endgroup
+%-------------- define the width for wrapping texts
+\newcommand{\textwrap}{5.5in}
 
 %= = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
 % add page number without the header line
@@ -75,7 +77,7 @@
 \begin{document}
 
 \par{\centering
-  {\LARGE \textsc{Xin Wang}}
+  {\Large \textsc{Xin Wang}}
 %  \\ Telecommunications Engineer, MSc. \bigskip    sub-title
 \par}
 
@@ -91,14 +93,17 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-.8em}
 \section{Education}
-\begin{tabular}{r|p{6.5in}}
+
+\begin{tabular}{r|p{5.4in}}
 %\begin{tabular}{r|p{17.5cm}}
   %--------------------------------------------------------
-  \textsc{Sept. 2015}--     & Department of Physics and Astronomy, UCLA    |   \textbf{towards Ph.D. in Astronomy and Astrophysics}   \\
+  \textsc{Sept. 2015}--     & Department of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
+                            &   \begin{flushright}
+                                    \textbf{towards Ph.D. in Astronomy and Astrophysics}
+                                \end{flushright}    \\[-2.8ex]
   \textsc{Present}          & Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, \\
-                            & \hspace*{7.4em} Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
+                            & \hspace*{7.35em} Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
                             & \texttt{Advisors: Profs. Tommaso Treu, Tucker A. Jones, Keren Sharon}     \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
@@ -118,9 +123,10 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-1em}
 \section{Awards and Honors}
-\begin{tabular}{r|p{5.6in}}
+
+%\vspace*{-.5em}
+\begin{tabular}{r|p{\textwrap}}
     \textsc{Jul. 2018} & UCLA Richardson Travel Fund (\$1.7k)   \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jun. 2018} & UCLA Dissertation Year Fellowship (\$47k: stipend+tuition)    \\
@@ -152,14 +158,16 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-2.5em}
 \section{Talks and Colloquia}
-\vspace{-0.5em}
 
 \begingroup
 \renewcommand\arraystretch{0.3}
-\begin{longtable}{r|p{5.6in}}
+\vspace*{-.5em}
+\begin{longtable}{r|p{\textwrap}}
 %\begin{longtable}{r|p{16.5cm}}
+
+    \textsc{Oct. 2018}   &   \href{http://www.astro.caltech.edu/events/tea_talks/tea_2018_2019/abstracts/wang.txt}{\textbf{Colloquium talk}} @ Caltech, Pasadena, CA \\
+    \multicolumn{2}{c}{} \\
 
     \textsc{Aug. 2018}   &   \textbf{Contributed talk}, @ \href{http://www.arcetri.astro.it/fm7/programme.html}{Focus Meeting 7 at the XXXth IAU General Assembly}, Vienna, Austria \\
     \multicolumn{2}{c}{} \\
@@ -233,10 +241,9 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{0.8em}
 \section{Approved Proposals (CoI)}
 
-\begin{list}{\labelitemi}{\leftmargin=2em}
+\begin{list}{\labelitemi}{\leftmargin=1.8em}
     \item[1] JWST-ERS-1324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
     \item[2] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
     \item[3] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
@@ -247,8 +254,8 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{0.8em}
 \section{Observing Experience}
+
 \begin{tabular}{l}
 \textbullet~Keck OSIRIS, 12 nights \\
 \textbullet~Keck DEIMOS, 3 nights \\
@@ -260,14 +267,14 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-.5em}
 \section{Professional Service}
+
 \begin{tabular}{l}
 \textbullet~Referee for \textit{Astrophysical Journal}, \textit{Astrophysical Journal Supplement Series} \\
 \textbullet~External Reviewer for Chinese Telescope Access Program TAC
 \end{tabular}
 
-\begin{tabular}{r|p{5.6in}}
+\begin{tabular}{r|p{5.4in}}
 \textsc{2014--2015}  & Organizer of Treu Group Meetings, UCSB \& UCLA \\
 \multicolumn{2}{c}{} \\[\narrow]
 
@@ -282,40 +289,40 @@
 \end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-.8em}
 \section{Teaching Experience}
-\begin{tabular}{rp{5.6in}}
-\textsc{\small Sept.--Dec. 2010}  & Teaching assistant of \textit{Theoretical Astrophysics} (upper division undergraduate course), NJU \\
-\textsc{\small Sept.--Dec. 2013}  & Teaching assistant of \textit{Physics 6 Lab}, UCSB   \\
-\textsc{\small Mar.--Jun. 2014}  & Teaching assistant of \textit{Physics 3: Basic Physics}, UCSB
+
+\begin{tabular}{rp{5.4in}}
+\textsc{\small Mar.--Jun. 2014}  & Teaching assistant of \textit{Physics 3: Basic Physics}, University of California, Santa Barbara \\
+\textsc{\small Sept.--Dec. 2013}  & Teaching assistant of \textit{Physics 6 Lab}, University of California, Santa Barbara \\
+\textsc{\small Sept.--Dec. 2010}  & Teaching assistant of \textit{Theoretical Astrophysics} (upper division undergraduate course), NJU
 \end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-.8em}
 \section{Working Experience and Outreach Activities}
-\begin{tabular}{rp{5.6in}}
-\textsc{2010--2012}  & President of Graduate Student Union in School of Astronomy and Space Sciences, NJU \\
-\textsc{2015--2017}  & Volunteer in the annual \textsc{Exploring Your Universe!} events, UCLA \\
-\textsc{2015--2017}  & Demonstrator of Astronomy experiments to local K12 schools in Los Angeles
+
+\begin{tabular}{rp{5.4in}}
+\textsc{2015--2017}  & Demonstrator of Astronomy experiments to local K12 schools in Los Angeles    \\
+\textsc{2015--2017}  & Volunteer in the annual \textsc{Exploring Your Universe!} events, University of California, Los Angeles  \\
+\textsc{2010--2012}  & President of Graduate Student Union in School of Astronomy and Space Sciences, NJU
 \end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-.5em}
 \section{Computer Skills}
-~~~~Python, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathmatica
+\hspace*{0.5em}
+Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 
 \clearpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{-1em}
 \section{Publications}
-\vspace{-.8em}
 
 \begingroup
 \renewcommand\arraystretch{1.2}
+\vspace*{-.5em}
 \begin{longtable}{rp{6.3in}}
 %\begin{longtable}{p{17cm}}
-\multicolumn{2}{c}{\textsc{1st/2nd Author Papers in Refereed Academic Journals}}      \\
+
+\multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
 8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2018, \textit{Astrophys. J.} submitted (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
@@ -331,8 +338,8 @@
 %    \item[5]\hypertarget{5}{} \textbf{Wang, X.}, \& Huang, Y. F. On the Counter-jet Emission in GRB Afterglows. 2010b, \textit{AIP Conference Proceedings}, 1279, 460 (\href{http://arxiv.org/abs/1012.0521}{arXiv:1012.0521})
 %\end{list}   \\
 \\[\narrow]
-\multicolumn{2}{c}{\textsc{Contributing Author Papers in Refereed Academic Journals}}      \\
-17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.} submitted (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
+\multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
+17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.} accepted (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
 15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})   \\
 14  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XII. Spatially Resolved Galaxy Star Formation Histories and True Evolutionary Paths at z$>$1. 2018, \textit{Astron. J.}, 156, 29 (\href{https://arxiv.org/abs/1710.00843}{arXiv:1710.00843})   \\
@@ -352,8 +359,6 @@
 
 \end{longtable}
 \endgroup
-
-
 
 
 \end{document}
