--- a/xwang_publist.tex
+++ b/xwang_publist.tex
@@ -49,19 +49,18 @@
 \pagestyle{fancy}
 \fancyhf{}      % delete current header and footer
 \lhead{Xin Wang}
-\rhead{List of Publications}
+\rhead{Publication List}
 \cfoot{\thepage}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-\vspace*{-.5em}
-
 \begingroup
 \renewcommand\arraystretch{1.2}
+\vspace*{-.5em}
 \begin{longtable}{rp{5.8in}}
 %\begin{longtable}{p{17cm}}
-\multicolumn{2}{c}{\bf\textsc{1st/2nd Author Papers in Refereed Academic Journals}}      \\
+\multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 \\[\narrow]
 
 8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2018, \textit{Astrophys. J.} submitted (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
@@ -79,7 +78,7 @@
 %\end{list}   \\
 \\[\narrow]
 \\[\narrow]
-\multicolumn{2}{c}{\bf\textsc{Contributing Author Papers in Refereed Academic Journals}}      \\
+\multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
 \\[\narrow]
 17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.} accepted (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
