Plaskett fellow submitted

--- a/xwang_cv_12pt.tex
+++ b/xwang_cv_12pt.tex
@@ -70,7 +70,7 @@
 \begin{document}
 
 \par{\centering
-  {\Large \textsc{Xin Wang}}
+  {\LARGE \textsc{Xin Wang}}
 %  \\ Telecommunications Engineer, MSc. \bigskip    sub-title
 \par}
 
@@ -78,6 +78,7 @@
 \section{Personal Information}
 \begin{tabular}{rl}
 %    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
+%    \textsc{Nationality:}    & Chinese   \\
     \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
     \textsc{Email, Phone:}  & \href{mailto:xwang@astro.ucla.edu}{xwang@astro.ucla.edu}  |  +1-805-574-0025  \\
     \textsc{Web:}  & \url{http://www.astro.ucla.edu/~xwang} \\
@@ -248,7 +249,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Approved Proposals (CoI)}
 
-\begin{list}{\labelitemi}{\leftmargin=1.5em}
+\begin{list}{\labelitemi}{\leftmargin=1.7em}
     \item[1] JWST-ERS-1324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day.
     \item[2] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster.
     \item[3] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes.
@@ -310,6 +311,8 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 \textsc{2010--2012}  & President of Graduate Student Union in School of Astronomy and Space Sciences, Nanjing University
 \end{tabular}
 
+
+\clearpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Publications}
 
@@ -363,3 +366,4 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 %#############################################################################################################
 % below are dropouts from previous versions of my cv
 %#############################################################################################################
+
