--- a/xwang_cv_12pt.tex
+++ b/xwang_cv_12pt.tex
@@ -167,6 +167,9 @@
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
 
+    \textsc{Nov. 2018}   &   \href{https://obs.carnegiescience.edu/content/tbd-108}{\textbf{Colloquium talk}} @ Carnegie Observatories, Pasadena, CA \\
+    \multicolumn{2}{c}{} \\
+
     \textsc{Oct. 2018}   &   \href{http://www.astro.caltech.edu/events/tea_talks/tea_2018_2019/abstracts/wang.txt}{\textbf{Colloquium talk}} @ Caltech, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
@@ -297,8 +300,8 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 \section{Teaching Experience}
 
 \begin{tabular}{rp{5in}}
-\textsc{\small Mar.--Jun. 2014}  & Teaching assistant of \textit{Physics 3: Basic Physics}, University of California, Santa Barbara \\
-\textsc{\small Sept.--Dec. 2013}  & Teaching assistant of \textit{Physics 6 Lab}, University of California, Santa Barbara   \\
+\textsc{\small Mar.--Jun. 2014}  & Teaching assistant of \textit{Physics 3: Basic Physics}, UCSB \\
+\textsc{\small Sept.--Dec. 2013}  & Teaching assistant of \textit{Physics 6 Lab}, UCSB \\
 \textsc{\small Sept.--Dec. 2010}  & Teaching assistant of \textit{Theoretical Astrophysics} (upper division undergraduate course), Nanjing University
 \end{tabular}
 
