--- a/xwang_publist.tex
+++ b/xwang_publist.tex
@@ -80,6 +80,7 @@
 \\[\narrow]
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
 \\[\narrow]
+18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.} submitted, (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
 17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.} accepted (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
 15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})   \\
