--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -97,7 +97,7 @@
                                     \textbf{towards Ph.D. in Astronomy and Astrophysics}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Present}          &   Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
-                            &   \texttt{Advisors: Profs. Tommaso Treu, Tucker A. Jones, Keren Sharon}     \\
+                            &   \texttt{Advisors: Profs. Tommaso Treu, Tucker Jones, Emanuele Daddi}     \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2013}--     &   Physics Department, University of California, Santa Barbara     \\[\narrow]
@@ -129,6 +129,11 @@
 
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
+
+    \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    \textsc{Dec. 2018} & UCLA Doctoral Student Travel Grant (\$1k)   \\
+    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jul. 2018} & UCLA Richardson Travel Fund (\$1.7k)   \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jun. 2018} & UCLA Dissertation Year Fellowship (\$47k: stipend+tuition)    \\
@@ -141,20 +146,20 @@
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Apr. 2015} & AAS International Travel Grant (\$1k)    \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Jun. 2014} & 1$^{\rm st}$ Prize for Excellent M.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province   \\
+    \textsc{Jun. 2014} & 1$^{\rm st}$ Prize for Excellent M.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province, China   \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Sept. 2013} & Broida Fellowship, UCSB (\$3k)  \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Dec. 2012} & National Scholarship for Graduates ($\sim$\$4k)  \\
+    \textsc{Dec. 2012} & National Scholarship for Graduate Students ($\sim$\$4k)  \\
                      & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
     \multicolumn{2}{c}{} \\[\narrow]
 %    \textsc{Jan. 2012} & Excellent Graduate Leader in School of Astronomy and Space Sciences, Nanjing University  \\
 %    \multicolumn{2}{c}{} \\[\narrow]
 %    \textsc{Nov. 2010} & Scholarship for Excellent Graduate Students in Nanjing University \\
 %    \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province   \\
+    \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province, China   \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Oct. 2009} & Scholarship of National Astronomical Observatories, Chinese Academy of Sciences
+    \textsc{Oct. 2009} & Scholarship of National Astrononmical Observatories, Chinese Academy of Sciences
 %\textsc{2007--2008} & Special Scholarship for Innovation, People's Scholarship, \textit{Der} Scholarship, etc.   \\
 \end{longtable}
 
@@ -235,7 +240,9 @@
     \textsc{Nov. 2012}   &   \textbf{Contributed talk}, @ \href{http://www.phys.tsinghua.edu.cn/publish/phy/5287/2012/20121102084855753317440/20121102084855753317440_.html}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2010}   &   \textbf{Contributed talk}, @ \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: Neutron Stars and their Environment''}, University of Hong Kong, Hong Kong   \\
+    \textsc{Jun. 2010}   &   \textbf{Contributed talk}, @ 
+    \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: 
+    Neutron Stars and their Environment''}, Hong Kong, China  \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Apr. 2009}   &   \textbf{Contributed talk}, @ \href{http://www.ns-grb.com/index0.html}{Frontiers of Space Astrophysics: Neutron Stars \& Gamma Ray Bursts --- Recent Developments \& Future Directions}, Cairo \& Alexandria, Egypt     \\
